kubernetes/exercise-07/java-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: java-mysql

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-app

  template:
    metadata:
      labels:
        app: java-app

    spec:
      imagePullSecrets:
        - name: docker-registry-secret

      containers:
        - name: java-app
          image: YOUR_DOCKERHUB_ID/demo-app:java-mysql-app
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
