kubernetes/exercise-07/java-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: java-mysql

spec:
  selector:
    app: java-app

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
