kubernetes/exercise-07/mysql-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: java-mysql

spec:
  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

  type: ClusterIP
