kubernetes/exercise-07/java-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app
  namespace: java-mysql

spec:
  ingressClassName: nginx

  rules:
    - host: java-app.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: java-app
                port:
                  number: 8080
